# technical_support_ticket

backend/: .gitignore  Containerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: base.py  message.py  ticket.py  user.py
frontend/: Containerfile
frontend/app/: page.tsx
infra_backend/: compose.yml
infra_frontend/: compose.yml
